reactive form control

--- a/cmp-reactive-forms/angular.json
+++ b/cmp-reactive-forms/angular.json
@@ -121,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "cmp-reactive-forms"
+  "defaultProject": "cmp-reactive-forms",
+  "cli": {
+    "analytics": false
+  }
 }
